[tool.poetry]
name = "polling-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
pyupgrade = "^3.3.1"
autoflake = "^2.0.2"
python-telegram-bot = "^20.2"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

